[package]
name = "a3s-lane-node"
version = "0.1.0"
edition = "2021"
license = "MIT"
publish = false

[workspace]

[lib]
crate-type = ["cdylib"]

[dependencies]
a3s-lane = { path = "../.." }
napi = { version = "2", features = ["async", "tokio_rt"] }
napi-derive = "2"
tokio = { version = "1", features = ["full"] }
serde_json = "1"

[build-dependencies]
napi-build = "2"

[profile.release]
lto = true
strip = "symbols"
