[package]
name = "a3s-lane-python"
version = "0.3.0"
edition = "2021"
license = "MIT"
publish = false

[workspace]

[lib]
name = "_a3s_lane"
crate-type = ["cdylib"]

[dependencies]
a3s-lane = { path = "../.." }
pyo3 = { version = "0.22", features = ["extension-module", "abi3-py39"] }
tokio = { version = "1", features = ["full"] }
serde_json = "1"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = "symbols"
