[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "a3s-lane"
version = "0.4.0"
description = "Python bindings for a3s-lane priority command queue"
license = "MIT"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "a3s_lane._a3s_lane"
